# flaskeleton

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  create  pyproject.toml  requirements.txt  settings.toml
flaskeleton/: __init__.py  functions.py  models.py
flaskeleton/blueprints/: api.py
flaskeleton/blueprints/api/: __init__.py  routes.py
flaskeleton/blueprints/web/: __init__.py
flaskeleton/blueprints/web/assets/css/: style.css
flaskeleton/blueprints/web/pages/: base.html  error.html  index.html
flaskeleton/extensions/: session.py  settings.py
migrations/versions/: 90a7151cfe3c_todolist.py
