[tool.poetry]
name = "flaskeleton"
version = "0.1.0"
description = ""
authors = ["William B M Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
dynaconf = "^3.2.4"
flask-session = "^0.5.0"
flask-migrate = "^4.0.5"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
