[tool.poetry]
authors = [
  "William B M Sampaio <56176702+WilliamSampaio@users.noreply.github.com>",
]
description = ""
license = "MIT"
name = "flaskeleton"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dynaconf = "^3.2.4"
flask = "^3.0.0"
flask-migrate = "^4.0.5"
flask-restx = "^1.3.0"
flask-session = "^0.5.0"
gunicorn = "^21.2.0"
python = "^3.11"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
